Playlist privacy, new coverstack header, artist top track fixes, palylist length, more dynamic playlist additions (live updates)

--- a/frontend/styles/main.less
+++ b/frontend/styles/main.less
@@ -1,3 +1,4 @@
+@import "light-noise-uris.less";
 html, body {
 	background: #dedede;
 	font-family: "Helvetica Neue", "Arial";
@@ -57,6 +58,7 @@ input, [contenteditable] {
 			td.inline-actions {
 				padding: 0;
 				position: relative;
+				width: 50px;
 				.heart {
 					height: 12px;
 					width: 12px;
@@ -72,16 +74,8 @@ input, [contenteditable] {
 			}
 			td:nth-child(2), th:nth-child(2) {
 				left: 5%;
-				width: 5%;
-			}
-			td:nth-child(2) {
-				opacity: 0.5;
 			}
 			td:nth-child(3), th:nth-child(3) {
-				left: 10%;
-				width: 75%;
-			}
-			td:nth-child(4), th:nth-child(4) {
 				left: 85%;
 				width: 15%;
 			}
@@ -655,24 +649,79 @@ input, [contenteditable] {
 		width: -webkit-calc(~"100% + 20px");
 		width: -moz-calc(~"100% + 20px");
 		width: -ms-calc(~"100% + 20px");
-		background: rgb(23,23,23);
+		background: rgb(230,230,230);
+		background-image: url(@light-noise-100);
 		height: 153px;
 		padding-bottom: -3px;
 		white-space: nowrap;
 		overflow: hidden;
+		border-bottom: 1px solid rgba(0,0,0,0.3);
 		img {
 			margin: 0;
-			padding: 0;
-			margin-left: 0px;
-			height: 100%;
-			min-width: 10%;
-			opacity: 0.3;
+			padding: 5px;
+			margin: 5px;
+			height: 140px;
+			width: 140px;
+			background: rgb(248,248,248);
+			box-shadow: 0 0 5px rgba(0,0,0,0.3);
+			position: absolute;
+			-webkit-animation: zoomin 1s;
+			opacity: 0;
+			-webkit-animation-fill-mode: forwards;
+		}
+		@-webkit-keyframes zoomin {
+			from {
+				opacity: 0;
+				height: 200px;
+				width: 200px;
+				margin-left: -30px;
+				margin-top: -30px;
+			}	
+			to {
+				opacity: 1;
+			}
+		}
+		img:nth-child(2) {
+			-webkit-animation-delay: 3s;
+			-webkit-transform: rotate(4deg);
+		}
+		img:nth-child(3) {
+			-webkit-animation-delay: 7s;
+			-webkit-transform: rotate(-3deg);
+		}
+		img:nth-child(4) {
+			-webkit-animation-delay: 12s;
+			-webkit-transform: rotate(2deg);
+		}
+		img:nth-child(5) {
+			-webkit-animation-delay: 17s;
+			-webkit-transform: rotate(-6deg);
+		}
+		img:nth-child(6) {
+			-webkit-animation-delay: 22s;
+			-webkit-transform: rotate(-1deg);
+		}
+		img:nth-child(7) {
+			-webkit-animation-delay: 27s;
+			-webkit-transform: rotate(5deg);
+		}
+		img:nth-child(8) {
+			-webkit-animation-delay: 32s;
+			-webkit-transform: rotate(-7deg);
+		}
+		img:nth-child(9) {
+			-webkit-animation-delay: 37s;
+			-webkit-transform: rotate(1deg);
+		}
+		img:nth-child(10) {
+			-webkit-animation-delay: 42s;
+			-webkit-transform: rotate(-5deg);
 		}
 	}
 	h1.oncoverstack {
 		position: absolute;
-		color: white;
-		background: rgba(0,0,0,0.85);
+		left: 170px;
+		color: rgb(48, 41, 41);
 		top: 5px;
 		padding: 5px;
 		clear: both;
@@ -812,6 +861,7 @@ input, [contenteditable] {
 		padding-bottom: 10px;
 		padding-top: 5px;
 		border-bottom: 1px solid rgba(0,0,0,0.1);
+		border-top: 1px solid rgba(0,0,0,0.1);
 		h2 {
 			position: relative;
 			left: 50%;
@@ -852,8 +902,8 @@ input, [contenteditable] {
 				margin-top: 10px;
 				margin-bottom: 10px;
 				padding: 10px;
-				background: rgb(230,230,230);
-				box-shadow: 0 0 5px white;
+				background: rgb(220,220,220);
+				box-shadow: 0 0 5px rgba(220,220,220, 0.5);
 				height: 400px;
 				width: 400px;
 			}
@@ -861,8 +911,7 @@ input, [contenteditable] {
 				width: 10%;
 				float: left;
 				height: 33.33%;
-				padding: 2px;
-				opacity: 0.2;
+				opacity: 0.12;
 				-webkit-user-drag: none;
 			}
 		}
@@ -978,18 +1027,18 @@ input, [contenteditable] {
 		background: linear-gradient(top, transparent 50%, darken(#dedede, 10%) 50%);
 		background-size: 50px 50px;
 		tr {
-			td:nth-child(3), th:nth-child(3) {
-				width: 30% !important
+			td:nth-child(2), th:nth-child(2) {
+				width: 45% !important;
 			}
-			td:nth-child(4), th:nth-child(4) {
+			td:nth-child(3), th:nth-child(3) {
 				left: 40% !important;
 				width: 20% !important;
 			}
-			td:nth-child(5), th:nth-child(5) {
+			td:nth-child(4), th:nth-child(4) {
 				left: 60%;
 				width: 25%;
 			}
-			td:nth-child(6), th:nth-child(6) {
+			td:nth-child(5), th:nth-child(5) {
 				left: 85%;
 				width: 15%;
 			}
@@ -1242,7 +1291,7 @@ input, [contenteditable] {
 .contextmenu {
 	overflow: hidden;
 	position: fixed;
-	z-index: 2;
+	z-index: 3;
 	width: 250px;
 	min-height: 100px;
 	.basic;
@@ -1326,13 +1375,6 @@ input, [contenteditable] {
 				opacity: 0.5;
 			}
 		}
-	}
-	.footnote {
-		font-size: 0.7em;
-		padding: 5px;
-		padding-left: 10px;
-		border-top: 1px solid rgba(0,0,0,0.1);
-		opacity: 0.6;
 	}
 	.context-options .loading-indicator {
 		padding: 0 !important;
@@ -1565,4 +1607,105 @@ input, [contenteditable] {
 			background-size: 12px 12px;
 		}
 	}
+}
+.playlistdescription {
+	position: absolute;
+	top: 45px;
+	color: white;
+	.playlist-privacy {
+		padding-top: 5px;
+		left: 165px;
+		width: 100px;
+		position: absolute;
+		color: black;
+		font-size: 0.8em;
+		text-shadow: 0 0 25px black;
+		opacity: 0.8;
+		padding-bottom: 5px;
+		border: 1px solid transparent;
+		border-radius: 2px;
+		padding-left: 5px;
+		img {
+			height: 20px;
+			vertical-align: middle;
+			margin-right: 5px;
+			margin-top: -3px;
+		}
+		background: transparent;
+		-webkit-transition: 1s background;
+	}
+	.playlist-privacy:hover {
+		border: 1px solid rgba(0,0,0,0.25);
+		cursor: pointer;
+		img, span {
+			cursor: pointer;
+		}
+	}
+	.playlist-privacy:active {
+		border: 1px solid rgba(255,255,255,0.35);
+		box-shadow: inset 0 0px 3px rgba(0,0,0,0.5);
+	}
+	.playlist-info {
+		font-size: 0.8em;
+		opacity: 0.6;
+		color: black;
+		position: absolute;
+		top: 29px;
+		left: 250px;
+		width: 200px;
+		text-shadow: 0 0 25px black;
+		margin-top: -10px;
+		margin-left: 25px;
+	}
+	.playlist-options-dropdown {
+		position: absolute;
+		background: white;
+		width: 200px;
+		min-height: 50px;
+		color: black;
+		top: 0;
+		left: 0;
+		z-index: 1;
+		top: 42px;
+		left: 165px;
+		display: none;
+		padding-top: 3px;
+		padding-bottom: 3px;
+		.basic;
+	}
+}
+.dropdownoption {
+	font-size: 0.8em;
+	padding: 8px;
+}
+.dropdownoption:hover {
+	background: rgba(0,0,0,0.1);
+}
+.in-playlist::before, .dropdown-check::before {
+	content: '';
+	padding-left: 16px;
+	margin-right: 8px;
+	background: url(/api/svg/check);
+	background-size: 16px 16px;
+	opacity: 0.3;
+	position: relative;
+}
+.not-in-playlist::before, .dropdown-no-check::before {
+	content: '';
+	padding-left: 24px;
+}
+.footnote {
+	font-size: 0.7em;
+	padding: 5px;
+	padding-left: 10px;
+	border-top: 1px solid rgba(0,0,0,0.1);
+	opacity: 0.6;
+	font-style: italic;
+}
+.hr {
+	height: 1px;
+	width: 100%;
+	background: rgba(0,0,0,0.1);
+	margin-top: 3px;
+	margin-bottom: 3px;
 }
